# xfrpc

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  PERFORMANCE_ANALYSIS.md  PERF_REPORT.md  README.md  agent.c  azure-pipelines.yml  client.c  client.h  colab_xfrpc.ipynb  commandline.c  commandline.h  common.c  common.h  compress.c  compress.h  config.c  config.h  const.h  contributors.md  control.c  control.h  crypto.c  crypto.h  crypto_stream.c  crypto_stream.h  debug.c  debug.h  encode.c  encode.h  fastpbkdf2.c  fastpbkdf2.h  frame.c  frame.h  frpc_min.ini  health_check.c  health_check.h  (+66 more)
.circleci/: config.yml
.github/workflows/: linux.yml
cicd/: azure-pipelines-xfrpc.yml
colab/: xfrpc.ipynb
docker/: Dockerfile  README.md
openwrt/: Makefile
openwrt/files/: xfrpc.conf  xfrpc.ini  xfrpc.init
pkg/debian/: rules
plugins/: httpd.c  httpd.h  instaloader.c  instaloader.h  telnetd.c  telnetd.h  youtubedl.c  youtubedl.h
systemd/: xfrpc.service
test/: iod_proto_server.c  test_iod_proto.c  test_ssh.ini  test_tcpmux.ini  test_uds.ini
test-quic-env/: frps.toml  frps2.toml  xfrpc-quic.ini  xfrpc-tcp.ini
test/e2e/: quic_interop_test.py  tcp_echo_server.py  test_proxy.py
test/e2e/certs/: ca.crt  ca.key  san.cnf  server.crt  server.csr  server.key
test/e2e/configs/: frps-mux.toml  frps-quic.toml  frps-tcp.toml  frps-tls.toml  xfrpc-mux.ini  xfrpc-quic.ini  xfrpc-tcp.ini  xfrpc-tls.ini
tests/: test_invariant_youtubedl.c
